// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component renders with menu, and utilities 1`] = `
<div>
  <nav
    class="container"
  >
    <a
      class="brand"
      href="redirection"
    >
      partial url
      <img
        alt="alt"
        class="brandLogo"
        src="logoSource"
      />
    </a>
    <div
      class="itemsContainer"
    >
      <div
        class="group"
      >
        <div
          class="item"
        >
          <div
            class="label"
          >
            button
          </div>
        </div>
      </div>
      <div />
      <div
        class="group"
      >
        <div
          class="item"
        >
          <i
            class="icon"
            icon="fal,icons"
          />
          <div
            class="label"
          >
            button
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`NavBar Component renders without menu nor utilities 1`] = `
<div>
  <nav
    class="container"
  >
    <a
      class="brand"
      href="redirection"
    >
      partial url
      <img
        alt="alt"
        class="brandLogo"
        src="logoSource"
      />
    </a>
    <div
      class="itemsContainer"
    />
  </nav>
</div>
`;
